# image-caption-generator

./: .gitignore  README.md  gpu-script.sh  main.py  pyproject.toml
label_generator/: augmentations.py
src/custom-dataset-generator/: generate_captions.py  read_output.py  test.py
src/label_generator/: generate_captions.py  label_generator.py  nutri_dataset.py
src/model/: dataset.py  dummy.py  encoder.py  encoder_with_val.py  eval.py  inference.py  init_model.py  nutritional_dataset.py  sweep_config.py  test.py  train.py  utils.py
src/qwen/: inference.py  init_model.py  test.py  train.py
src/test/: encoder.py
