[project]
name = "image-caption-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==3.6.0",
    "numpy==1.26.4",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "torch==2.6",
    "transformers>=4.53.0",
]
