[project]
name = "image-caption-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clip>=0.2.0",
    "datasets==3.6.0",
    "ipykernel>=6.29.5",
    "numpy==1.26.4",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "torch==2.6",
    "transformers>=4.53.0",
    "wandb>=0.20.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
